--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -2,8 +2,7 @@
     <img class="img-fluid" src="assets/about.jpg" class="card-img" alt="About Us" height="220" width="auto">
     <div class="card-img-overlay">
         <h5 class="h5 card-title mt-5"> <span style="color: rgb(255, 0, 230);">About</span> Us</h5>
-        <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-            This content is a little bit longer.</p> -->
+
         <!-- <p class="card-text" style="float: right; margin-top: 150px;">Thank you for visiting this section, here you will
             know all about me.</p> -->
     </div>
@@ -33,10 +32,12 @@
             <img src="assets/Dr. SRKP.jpg" class="img-fluid doctorImage " alt="profile image">
             <p class="doctorName mb-1"> <strong>Dr. Surendra Kumar Patel</strong></p>
             <p class="doctorDesignation ">(Managing Director)</p>
-            <p class="md-desc"><i><b>As one of the country’s leading diagnostic companies, MHL
+            <p class="md-desc"><i><b>
+                        As one of the country’s leading diagnostic companies, MHL
                         continues building and nurturing its talent. Several employee training and
                         development initiatives are often undertaken. This helps incorporate
-                        integrity as a core ingredient of the Company’s work culture.</b></i></p>
+                        integrity as a core ingredient of the Company’s work culture.
+                    </b></i></p>
         </div>
         <div class="col-sm-5 offset-sm-1">
             <h2>MD’s Message</h2>
@@ -47,14 +48,14 @@
                 Patel to their family and network. Our Chairman in his note has
                 emphasized on Patel’ core vision of putting the patients first and our
                 customer loyalty score is an outcome of this vision.</p>
-    
+
             <p class="text-justify"><strong>Going closer to the patient</strong><br>
                 FY19 has ended on a positive note for us as the company delivered faster
                 than industry growth. We are positive on the short and medium term growth
                 for Patel owing to fast paced network expansion, relentless execution,
                 strong brand and customer first philosophy.
             </p>
-    
+
             <p class="text-justify"><strong>The Patel Family</strong><br>
                 Our people are at the core of everything we do. Our highly experienced
                 leadership team leads day to day business and operations. Patel’ strong
@@ -79,51 +80,51 @@
         <p>To be the undisputed market leader by providing accessible, affordable, timely and quality healthcare
             diagnostics, applying insights and cutting edge technology to create value for all stakeholders.</p>
     </div>
+
     <div class="col m-2">
         <h2 class="text-center">Our Vision</h2>
         <p>Be the most trusted healthcare partner, enabling healthier lives.</p>
     </div>
 </div>
 
-
-
 <h1 class="mt-5 ps-5"><u>Our Team</u></h1>
+
 <div class="card-group m-5">
+
     <div class="card ms-3">
         <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Dr. Surendra Kumar</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
-            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
         </div>
     </div>
+
     <div class="card ms-3">
         <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
-            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
         </div>
     </div>
+
     <div class="card ms-3">
         <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
         </div>
     </div>
+
     <div class="card ms-3">
         <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                 content. This card has even longer content than the first to show that equal height action.</p>
-            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
         </div>
     </div>
-</div>
 
+</div>
 <app-scroll-top-button></app-scroll-top-button>
