--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,12 +1,10 @@
-
 .carousel-item{
     width: 100%;
     height: 380px;
 }
 
 
-/* KEYPOINTS FOR CAROUSEL BUTTON
- */
+/* KEYPOINTS FOR CAROUSEL BUTTON */
 
 .c-item{
     height: 450px;
