--- a/src/app/customers-say/customers-say.component.html
+++ b/src/app/customers-say/customers-say.component.html
@@ -1,17 +1,19 @@
-
-
-
 <div class="testimonials">
     <div class="inner">
+
         <h1>What Our Customers Say </h1>
 
         <div class="border"></div>
 
         <div class="row">
+
             <div class="col">
                 <div class="testimonial">
-                    <img src="assets/Images/Images-6.jpg" alt="">
-                    <div class="name">Full name</div>
+
+                    <img src="assets/customers-say/dev.jpg" alt="">
+
+                    <div class="name">Pushpdev Patel</div>
+
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -24,13 +26,14 @@
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the industry's standard dummy text ever since the 1500s,
                     </p>
+
                 </div>
             </div>
 
             <div class="col">
                 <div class="testimonial">
-                    <img src="assets/Images/Images-7.jpg" alt="">
-                    <div class="name">Full name</div>
+                    <img src="assets/customers-say/dev.jpg" alt="">
+                    <div class="name">Pushpdev Patel</div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -48,8 +51,8 @@
 
             <div class="col">
                 <div class="testimonial">
-                    <img src="assets/Images/Images-8.jpg" alt="">
-                    <div class="name">Full name</div>
+                    <img src="assets/customers-say/dev.jpg" alt="">
+                    <div class="name">Pushpdev Patel</div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -67,8 +70,8 @@
 
             <div class="col">
                 <div class="testimonial">
-                    <img src="assets/Images/Images-8.jpg" alt="">
-                    <div class="name">Full name</div>
+                    <img src="assets/customers-say/dev.jpg" alt="">
+                    <div class="name">Pushpdev Patel</div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -86,8 +89,8 @@
 
             <div class="col">
                 <div class="testimonial">
-                    <img src="assets/Images/Images-8.jpg" alt="">
-                    <div class="name">Full name</div>
+                    <img src="assets/customers-say/dev.jpg" alt="">
+                    <div class="name">Pushpdev Patel</div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -105,8 +108,8 @@
 
             <div class="col">
                 <div class="testimonial">
-                    <img src="assets/Images/Images-8.jpg" alt="">
-                    <div class="name">Full name</div>
+                    <img src="assets/customers-say/dev.jpg" alt="">
+                    <div class="name">Pushpdev Patel</div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
