--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,148 +1,6 @@
 <app-carousel></app-carousel>
 
 
-
-<!-- <div class="container mt-5">
-
-    <h1 class="h1 ms-4">Our Best Packages</h1>
-    <p class="m-3">Choose from our wide range of TruHealth Package and Health Checkups</p>
-    <div id="carouselExampleControls" class="carousel slide p-4 mt-4 " data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="card-group ">
-                    <div class="card ">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-group">
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-group">
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">View More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev text-dark " type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon bg-info" aria-hidden="true" style="border-radius: 50%;"></span>
-            <span class="visually-hidden ">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon bg-info" aria-hidden="true" style="border-radius: 50%;"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-</div> -->
-
-
 <div class="container-fluid package mt-5">
 
     <h1 class="h1 ms-4">Our Best <span style="color: rgb(255, 0, 230);">Packages</span></h1>
@@ -158,19 +16,21 @@
 
                     <div class="card-group  d-flex justify-content-center align-items-center">
                         <div class="card ">
-                            <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
+                            <!-- <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="..."> -->
+                            <i class="fas fa-vials mt-3"></i>
                             <div class="card-body ">
-                                <h5 class="card-title ">Calcium Test</h5>
-                                <p class="card-text">
+                                <h5 class="card-title mt-1 ">Calcium Test</h5><hr class="mt-3">
+                                <!-- <p class="card-text">
                                     Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                    bulk of the card's content.</p> -->
+                                    <p class="mt-3">Rs. 230</p>
                                 <a href="#" class="btn btn-primary">View More</a>
                             </div>
                         </div>
                         <div class="card d-none d-sm-block">
-                            <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
+                            <i class="fas fa-vials mt-3"></i>
                             <div class="card-body">
-                                <h5 class="card-title">CBC (Complete Blood Count) Test</h5>
+                                <h5 class="card-title">CBC (Complete Blood Count) Test</h5><hr class="mt-3">
                                 <!-- <p class="card-text">
                                     Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p> -->
@@ -201,9 +61,10 @@
                     </div>
                 </div>
             </div>
+
+
             <div class="carousel-item">
                 <div class="row ">
-
                     <div class="card-group  d-flex justify-content-center align-items-center">
                         <div class="card ">
                             <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
@@ -259,6 +120,8 @@
                     </div>
                 </div>
             </div>
+
+
             <div class="carousel-item">
                 <div class="row ">
 
@@ -318,6 +181,8 @@
                 </div>
             </div>
         </div>
+
+
         <button class="carousel-control-prev text-dark " type="button" data-bs-target="#carouselExampleControls"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon bg-info" aria-hidden="true" style="border-radius: 50%;"></span>
@@ -331,11 +196,11 @@
 
     </div>
 </div>
+
+
 <!-- Why Choose Us Section -->
 
 <div class="container mt-4">
-    <!-- <h1>Why Choose us ?</h1>
-    <div class="divider"></div> -->
 
     <div class="feat bg-gray pt-5 pb-5">
         <div class="container">
@@ -364,7 +229,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="item"> <span class="icon feature_box_col_three">
                             <img src="assets/Choose-us/24 x 7.svg" alt="" height="60" width="60"
-                            style="border-radius: 50%;">
+                                style="border-radius: 50%;">
                         </span>
                         <h6>24 x 7 User Support</h6>
                         <p>If our customer has any problem and any query we are always happy to help then.</p>
@@ -373,17 +238,16 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="item">
                         <span class="icon feature_box_col_four">
-                            <img src="assets/Choose-us/accurate-reports.svg"
-                                alt=""></span>
+                            <img src="assets/Choose-us/accurate-reports.svg" alt=""></span>
                         <h6>Accurate Reports</h6>
                         <p>Everyone wants to live on top of the mountain, but all the happiness and growth occurs while
                             you're climbing it</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <div class="item"> 
-                        <span class="icon feature_box_col_five"><img
-                                src="assets/Choose-us/patient-service-centres.svg" alt="" height="60" width="60" style="border-radius: 50%;"></span>
+                    <div class="item">
+                        <span class="icon feature_box_col_five"><img src="assets/Choose-us/patient-service-centres.svg"
+                                alt="" height="60" width="60" style="border-radius: 50%;"></span>
                         <h6>Patient Service Centres</h6>
                         <p>Holding back technology to preserve broken business models is like allowing blacksmiths to
                             veto the internal combustion engine in order to protect their horseshoes.</p>
@@ -411,23 +275,20 @@
 
     <!-- <div class="border"></div> -->
 
-
-
     <div class="wrapper">
         <div class="review-card">
             <div class="header-content">
                 <div class="img-area">
-                    <img alt="customer1" src="assets/Images/Images-10.jpg">
+                    <img alt="customer1" src="assets/customers-say/dev.jpg">
                 </div>
                 <div class="info">
-                    <h4>John Doe</h4>
-                    <p>Maketing Manager</p>
+                    <h4>Dev Patel</h4>
                 </div>
             </div>
             <div class="single-review">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor eveniet deleniti repellendus!
-                    Minima,
-                    dolorum.</p>
+                <p>
+                    Very good staff, excellent execution of samples, timely results even before promised time.
+                </p>
             </div>
             <div class="review-footer">
                 <div class="rating">
@@ -437,23 +298,22 @@
                     <span class="">★</span>
                     <span class="">★</span>
                 </div>
-                <p>Reviewed on 01/01/2023</p>
             </div>
         </div>
         <div class="review-card">
             <div class="header-content">
                 <div class="img-area">
-                    <img alt="customer1" src="assets/Images/Images-11.jpg">
+                    <img alt="customer1" src="assets/customers-say/dev.jpg">
                 </div>
                 <div class="info">
                     <h4>Mark Wood</h4>
-                    <p>Graphics Expert</p>
+                    <!-- <p>Graphics Expert</p> -->
                 </div>
             </div>
             <div class="single-review">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor eveniet deleniti repellendus!
-                    Minima,
-                    dolorum.</p>
+                <p>
+                    The services were highly affordable and convenient.
+                </p>
             </div>
             <div class="review-footer">
                 <div class="rating">
@@ -463,23 +323,24 @@
                     <span class="active">★</span>
                     <span class="">★</span>
                 </div>
-                <p>Reviewed on 01/02/2023</p>
+                <!-- <p>Reviewed on 01/02/2023</p> -->
             </div>
         </div>
         <div class="review-card">
             <div class="header-content">
                 <div class="img-area">
-                    <img alt="customer1" src="assets/Images/Images-6.jpg">
+                    <img alt="customer1" src="assets/customers-say/dev.jpg">
                 </div>
                 <div class="info">
                     <h4>Jason Chedd</h4>
-                    <p>Web Designer</p>
+                    <!-- <p>Web Designer</p> -->
                 </div>
             </div>
             <div class="single-review">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor eveniet deleniti repellendus!
-                    Minima,
-                    dolorum.</p>
+                <p>
+                     The Home Service was excellent. Medical Technician took samples at 7:00am and returned at 9:30
+                    after breakfast to take further samples.
+                </p>
             </div>
             <div class="review-footer">
                 <div class="rating">
@@ -489,23 +350,25 @@
                     <span class="active">★</span>
                     <span class="active">★</span>
                 </div>
-                <p>Reviewed on 01/03/2023</p>
+                <!-- <p>Reviewed on 01/03/2023</p> -->
             </div>
         </div>
         <div class="review-card">
             <div class="header-content">
                 <div class="img-area">
-                    <img alt="customer1" src="assets/Images/Images-6.jpg">
+                    <img alt="customer1" src="assets/customers-say/dev.jpg">
                 </div>
                 <div class="info">
                     <h4>Jason Chedd</h4>
-                    <p>Web Designer</p>
+                    <!-- <p>Web Designer</p> -->
                 </div>
             </div>
             <div class="single-review">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dolor eveniet deleniti repellendus!
-                    Minima,
-                    dolorum.</p>
+                <p>
+                    the staff they are very professional and friendly
+                       definitely I
+                       will recommend my friends and family to patel lab.
+                </p>
             </div>
             <div class="review-footer">
                 <div class="rating">
@@ -515,7 +378,6 @@
                     <span class="active">★</span>
                     <span class="active">★</span>
                 </div>
-                <p>Reviewed on 01/03/2023</p>
             </div>
         </div>
         <button class="btn btn-info p-2 fs-3" routerLink="/customers-say">Know More</button>
