--- a/src/app/Our-Services/services.component.html
+++ b/src/app/Our-Services/services.component.html
@@ -1,5 +1,6 @@
 <!-- <p class="h1 m-3 ms-5 text-center"><u> Our Services</u></p>  -->
-<p class="h1 m-3 ms-5 text-center"> Our <span style="color: rgb(255, 0, 230);">Services</span></p>
+<p class="h1 m-3 ms-5 text-center"> {{ourServices.our}} <span
+        style="color: rgb(255, 0, 230);">{{ourServices.ser}}</span></p>
 <p class="m-1 p-3">Metropolis is a global leader in Blood Tests, Diagnostics and Wellness services. With operations
     across India, Africa,
     South Asia, and Middle East, we are trusted millions of Customers for their Inner Health Management.
@@ -12,111 +13,91 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                <h5 class="card-title text-center m-4">Medical Store</h5>
+                <img [src]="pharmacy.url" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">{{pharmacy.name}}</h5>
                 <div class="card-body">
-                    <p class="card-text text-center m-4">This is a longer card with supporting text below as a natural
-                        lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <p class="card-text text-center m-4">{{pharmacy.description}}</p>
                 </div>
             </div>
         </div>
 
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Services/blood-collection.jpg" class="card-img-top" alt="...">
-                <h5 class="card-title text-center m-4">Home Blood Collection</h5>
+                <img [src]="bloodCollection.url" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">{{bloodCollection.name}}</h5>
                 <div class="card-body">
-                    <p class="card-text  text-center m-4">This is a short card.</p>
+                    <p class="card-text  text-center m-4">{{bloodCollection.description}}</p>
                 </div>
             </div>
         </div>
 
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Services/Report.jpg" class="card-img-top" alt="...">
-                <h5 class="card-title text-center m-4">Online Reporting</h5>
+                <img [src]="onlineReporting.url" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">{{onlineReporting.name}}</h5>
                 <div class="card-body">
-                    <p class="card-text  text-center m-4">We Provide Online Reporting System, You Can Download Your
-                        Report by Your Phone
-                        or PC via Your Mail.</p>
+                    <p class="card-text  text-center m-4">{{onlineReporting.description}}</p>
                 </div>
             </div>
         </div>
 
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Services/Doctor-suggestion.jpg" class="card-img-top" alt="...">
-                <h5 class="card-title text-center m-4">Doctor's Suggestion</h5>
+                <img [src]="doctorSuggestion.url" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">{{doctorSuggestion.name}}</h5>
                 <div class="card-body">
-                    <p class="card-text  text-center m-4">
-                        Allahabad Diagnostics launching Soon a very dedicated "MEDICAL STORE" Where you all can get any
-                        kind of medicine in very affordable prices.</p>
+                    <p class="card-text  text-center m-4">{{doctorSuggestion.description}}
+                    </p>
                 </div>
             </div>
         </div>
 
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Services/X-Ray.jpg" class="card-img-top" alt="...">
-                <h5 class="card-title text-center m-4">X-Ray Center</h5>
+                <img [src]="xRayCenter.url" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">{{xRayCenter.name}}</h5>
                 <div class="card-body">
-                    <p class="card-text  text-center m-4">This is a longer card with supporting text below as a natural
-                        lead-in to
-                        additional
-                        content.</p>
+                    <p class="card-text  text-center m-4">{{xRayCenter.description}}</p>
                 </div>
             </div>
         </div>
 
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                <h5 class="card-title text-center m-4">OPD Facility Available</h5>
+                <img [src]="opdFacility.url" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">{{opdFacility.name}}</h5>
                 <div class="card-body">
-                    <p class="card-text  text-center m-4">This is a longer card with supporting text below as a natural
-                        lead-in to
-                        additional
-                        content.</p>
+                    <p class="card-text  text-center m-4">{{opdFacility.description}}</p>
                 </div>
             </div>
         </div>
 
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Services/wellness.jpg" class="card-img-top" alt="...">
-                <h5 class="card-title text-center m-4">Wellness Solutions</h5>
+                <img [src]="wellness.url" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">{{wellness.name}}</h5>
                 <div class="card-body">
-                    <p class="card-text  text-center m-4"> We offer pre-employment check-ups, employee health plans, and
-                        annual check-ups
-                        for corporates to build a healthy workforce.</p>
+                    <p class="card-text  text-center m-4"> {{wellness.description}}</p>
                 </div>
             </div>
         </div>
 
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Services/nutrition-diet.jpg" class="card-img-top" alt="...">
-                <h5 class="card-title text-center m-4">Nutrition & Dietition</h5>
+                <img [src]="nutritionDietition.url" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">{{nutritionDietition.name}}</h5>
                 <div class="card-body">
-                    <p class="card-text  text-center m-4">This is a longer card with supporting text below as a natural
-                        lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <p class="card-text  text-center m-4">{{nutritionDietition.description}}</p>
                 </div>
             </div>
         </div>
 
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
-                <h5 class="card-title text-center m-4">Medical Store</h5>
+                <img [src]="medicalStore.url" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">{{medicalStore.name}}</h5>
                 <div class="card-body">
-                    <p class="card-text text-center m-4">This is a longer card with supporting text below as a natural
-                        lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <p class="card-text text-center m-4">{{medicalStore.description}}</p>
                 </div>
             </div>
         </div>
