--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -1,10 +1,10 @@
 .card img {
-
     border: none;
     margin: 0;
     padding: 0;
     vertical-align: top;
 }
+
 .card-img-overlay h5 {
     margin-left: 180px;
     font-size: 60px;
@@ -26,9 +26,9 @@ u {
     text-decoration-line: underline;
     text-decoration-color: red;
     text-decoration-style: solid;
-    /* transition: all .5s ease-in; */
 }
 
-.doctorName,.md-desc{
+.doctorName,
+.md-desc {
     font-family: poppins;
 }
