--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -2,15 +2,13 @@
 
     <img src="assets/contact-us.jpg" alt="" class="w-100" height="200">
     <div class="col address">
-
         <!-- <h1 class="text-center">Get in touch</h1>
         <p class="text-center">Lore optio sit minima. Harum quaerat veniam optio soluta cumque a eos aspernatur.
             Delectus, quasi?
         </p> -->
         <div class="row m-5 mt-4">
 
-            <div class="col-4">
-
+            <div class="col">
                 <h4>
                     <a href="https://maps.app.goo.gl/CeyqYnuK5q21NpdV6"><i class="fa-solid fa-location-dot"></i></a>
                 </h4>
@@ -20,34 +18,31 @@
                 </p>
             </div>
 
-            <div class="col-4">
-
+            <div class="col">
                 <h4> <i class="fa-solid fa-envelope"></i></h4>
                 <p class="text-center">
                     <span>E-Mail :</span>
                     <a href="mailto:dev@gmail.com">dev&#64;gmail.com</a>
                 </p>
-
             </div>
-            <div class="col-4">
 
-                <!-- <h5> -->
+            <div class="col">
                 <i class="fa-solid fa-phone"></i>
-                <!-- </h5> -->
                 <p class="text-center">
                     <span> Mobile No.</span>
                     <a href="tel:8543017883">8543017883</a>
                 </p>
-
             </div>
         </div>
     </div>
+
     <hr style="color: rgb(0, 0, 0); border: 2px solid rgb(0, 0, 0);">
 
     <div class="text mt-1">
         <h1 class="text-center " style="color: rgb(255, 0, 230);">Have some query mail us</h1>
         <p class="text-center text-dark">Visit our office or drop a word if you have any queries.</p>
     </div>
+
     <div class="container-xxl mt-5">
 
         <div class="row">
@@ -62,33 +57,86 @@
 
             <div class="col-lg-6 form mb-5 mt-5" style="height: 350px;">
 
-                <div class="form-floating mb-3">
-                    <input type="name" class="form-control" id="floatingInput" placeholder="Enter Your Name">
-                    <label for="floatingInput">Enter Your Name</label>
-                </div>
+                <form [formGroup]="submitForm" (ngSubmit)="submitForm.status!=='INVALID' && submitFn()">
 
-                <div class="row">
-                    <div class="col mb-3">
-                        <input type="email" class="form-control " id="floatingInput" placeholder="Enter Your Email">
-                        <!-- <label for="floatingInput">Email address</label> -->
+                    <div class=" mb-3">
+                        <input type="text" class="form-control" id="name" placeholder="Enter your Name"
+                            formControlName="name"[ngClass]="{error:getControl('name')?.errors && getControl('name')?.touched}">
+
+                        <div *ngIf="getControl('name')?.errors && getControl('name')?.touched">
+
+                            <small class="text-danger" *ngIf="getControl('name')?.errors?.['required']">
+                                First name is required.
+                            </small>
+                            <small class="text-danger" *ngIf="getControl('name')?.errors?.['maxlength']">
+                                Only 32 characters are allowed.
+                            </small>
+
+                        </div>
                     </div>
-                    <div class="col">
-                        <input type="number" class="form-control" id="floatingNumber" placeholder="Mobile Number">
-                        <!-- <label for="floatingNumber">Mobile Number</label> -->
+
+
+                    <div class="row">
+
+                        <div class="col mb-3">
+                            <input type="email" class="form-control " id="floatingInput" placeholder="Enter Your Email"
+                                formControlName="email" [ngClass]="{error:getControl('email')?.errors && getControl('email')?.touched}">
+
+                            <div *ngIf="getControl('email')?.errors && getControl('email')?.touched">
+
+                                <small class="text-danger" *ngIf="getControl('email')?.errors?.['required']">
+                                    Email is required.
+                                </small>
+                                <small class="text-danger" *ngIf="getControl('email')?.errors?.['pattern']">
+                                    Please enter a valid email.
+                                </small>
+
+                            </div>
+                        </div>
+
+                        <div class="col">
+
+                            <input type="number" class="form-control" id="floatingNumber" placeholder="Mobile Number"
+                                formControlName="mobile" [ngClass]="{error:getControl('mobile')?.errors && getControl('mobile')?.touched}" >
+
+                            <div *ngIf="getControl('mobile')?.errors && getControl('mobile')?.touched">
+
+                                <small class="text-danger" *ngIf="getControl('mobile')?.errors?.['required']">
+                                    Mobile number is required.
+                                </small>
+                                <small class="text-danger"
+                                    *ngIf="getControl('mobile')?.errors?.['maxlength'] || getControl('mobile')?.errors?.['minlength']  || getControl('mobile')?.errors?.['pattern']">
+                                    Please enter a valid mobile no.
+                                </small>
+
+                            </div>
+                        </div>
+
                     </div>
-                </div>
 
-                <div class="form-floating mt-3">
-                    <textarea class="form-control " placeholder="Leave a comment here" id="floatingTextarea2"
-                        style="height: 100px"></textarea>
-                    <label for="floatingTextarea2">Comments</label>
-                </div>
+                    <div class="mt-3">
 
-                <div class="text-center ">
-                    <button type="button" class="btn btn-outline-success mt-3">Submit</button>
-                    <!-- <button type="button" class="btn btn-outline-danger m-3">Reset</button> -->
-                </div>
+                        <textarea class="form-control " placeholder="Leave a comment here" id="floatingTextarea2"
+                            style="height: 100px" formControlName="message" [ngClass]="{error:getControl('message')?.errors && getControl('message')?.touched}"></textarea>
 
+                        <div *ngIf="getControl('message')?.errors && getControl('message')?.touched">
+
+                            <small class="text-danger" *ngIf="getControl('message')?.errors?.['required']">
+                                Message is required.
+                            </small>
+                            <small class="text-danger" *ngIf="getControl('message')?.errors?.['minlength']">
+                                Only 32 characters are allowed.</small>
+
+                        </div>
+                    </div>
+
+                    <div class="text-center ">
+
+                        <button type="button" class="btn btn-outline-success mt-3" [disabled]="submitForm.status==='INVALID' ">
+                            Submit
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
