--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,52 +1,60 @@
-
 .container {
     font-family: poppins;
-  
+
 }
-div{
+
+div {
     font-family: poppins;
 }
+
 .carousel {
-    /* width: 100%; */
     margin: 10px;
-    /* background-color: red; */
 }
 
 .carousel-item {
     width: 100%;
-    /* height: 380px; */
 }
 
 .card {
 
     height: 380px;
     width: 250px;
-    /* border: 2px solid red; */
     margin-right: 10px;
     transition: all 0.4s ease;
 
 }
 
-.card:hover {
-    box-shadow: 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030;
-    transform: translateY(-15px);
-
-    /* box-shadow: 1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff; */
+.card i {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    color: #ff00f7;
+    font-size: 40px;
+    margin-left: 0;
 }
-.review-card{
+
+.card:hover {
+    /* box-shadow: 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030; */
+    transform: translateY(-15px);
+}
+
+.review-card {
     transition: all 0.4s ease;
 
 }
-.review-card:hover{
+
+.review-card:hover {
     transform: translateY(-15px);
 
 }
-.btn{
+
+.btn {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
 }
+
 .divider {
     margin: 20px 0;
     width: 100px;
@@ -83,7 +91,6 @@ div{
 .item:hover .item,
 .item:hover span.icon {
     background: #fff;
-    /* border-radius: 10px; */
     -webkit-transition: all .5s ease 0;
     transition: all .5s ease 0;
     transition: all 0.5s ease 0s;
@@ -247,11 +254,14 @@ div{
         width: 85%;
     }
 }
-.about,.package{
+
+.about,
+.package {
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
 
 }
-.btn:hover{
+
+.btn:hover {
     border: 1px solid rgb(255, 0, 251);
     color: #fff;
     background-color: rgb(255, 0, 251);
