--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -16,11 +16,11 @@
             <img src="https://cdn.pixabay.com/photo/2017/03/09/12/31/error-2129569__340.jpg" alt="" class="img-fluid">
         </div>
         <div class=" col-md-6 mt-5">
-            <p class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</p>
-            <p class="lead">
+            <h1 class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</h1>
+            <p class="lead mt-3">
                 The page you’re looking for doesn’t exist.
             </p>
-            <a href="index.html" class="btn btn-primary">Go Home</a>
+            <a href="index.html" class="btn btn-primary p-2 mt-3">Go Home</a>
         </div>
 
     </div>
