why choose us component generated

--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <input type="radio" name="dot" id="one">
   <input type="radio" name="dot" id="two">
   <div class="main-card">
@@ -113,4 +113,11 @@
     <label for="one" class=" active one"></label>
     <label for="two" class="two"></label>
   </div>
-</div>
+</div> -->
+
+
+
+
+
+
+
