--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -29,7 +29,7 @@
     <div class="row p-3">
         <div class="col-sm-1"></div>
         <div class="col-sm-4">
-            <img src="assets/Dr. SRKP.jpg" class="img-fluid doctorImage " alt="profile image">
+            <img src="assets/Our_Team/Dr. SRKP.jpg" class="img-fluid doctorImage " alt="profile image">
             <p class="doctorName mb-1"> <strong>Dr. Surendra Kumar Patel</strong></p>
             <p class="doctorDesignation ">(Managing Director)</p>
             <p class="md-desc"><i><b>
@@ -87,44 +87,19 @@
     </div>
 </div>
 
-<h1 class="mt-5 ps-5"><u>Our Team</u></h1>
+<h1 class="mt-5 ps-5 text-center">Our Team</h1>
 
-<div class="card-group m-5">
 
-    <div class="card ms-3">
-        <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Dr. Surendra Kumar</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
+<div class="container-xxl mt-3">
+    <div class="row">
+        <div class="col-md-3 g-2" *ngFor="let doctor of ourTeam">
+            <div class="card ms-3">
+                <img [src]="doctor.doctorImage" class="card-img-top" alt="..." height="300">
+                <div class="card-body">
+                    <h5 class="card-title">{{doctor.doctorName}}</h5>
+                    <p class="card-text">{{doctor.doctorAbout}}</p>
+                </div>
+            </div>
         </div>
     </div>
-
-    <div class="card ms-3">
-        <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-        </div>
-    </div>
-
-    <div class="card ms-3">
-        <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        </div>
-    </div>
-
-    <div class="card ms-3">
-        <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-    </div>
-
 </div>
-<app-scroll-top-button></app-scroll-top-button>
