--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,26 +14,29 @@
             <div class="carousel-item active">
                 <div class="row ">
 
-                    <div class="card-group  d-flex justify-content-center align-items-center">
-                        <div class="card ">
-                            <!-- <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="..."> -->
-                            <i class="fas fa-vials mt-3"></i>
+                    <div class="card-group">
+                        <div class="card">
+                            <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
+
                             <div class="card-body ">
-                                <h5 class="card-title mt-1 ">Calcium Test</h5><hr class="mt-3">
-                                <!-- <p class="card-text">
+                                <h5 class="card-title">Calcium Test</h5>
+                                <hr>
+                                <p class="card-text">
                                     Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p> -->
-                                    <p class="mt-3">Rs. 230</p>
+                                    bulk of the card's content.</p>
+                                <p class="mt-3">Rs. 230</p>
                                 <a href="#" class="btn btn-primary">View More</a>
                             </div>
                         </div>
                         <div class="card d-none d-sm-block">
-                            <i class="fas fa-vials mt-3"></i>
+                            <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
+
                             <div class="card-body">
-                                <h5 class="card-title">CBC (Complete Blood Count) Test</h5><hr class="mt-3">
-                                <!-- <p class="card-text">
+                                <h5 class="card-title">CBC (Complete Blood Count) Test</h5>
+                                <hr>
+                                <p class="card-text">
                                     Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p> -->
+                                    bulk of the card's content.</p>
                                 <h5>Rs. <span>150</span></h5>
                                 <a href="#" class="btn btn-primary mt-5">View More</a>
                             </div>
@@ -199,73 +202,7 @@
 
 
 <!-- Why Choose Us Section -->
-
-<div class="container mt-4">
-
-    <div class="feat bg-gray pt-5 pb-5">
-        <div class="container">
-            <div class="row">
-                <div class="section-head col-sm-12">
-                    <h1>Why<span style="color: rgb(255, 0, 230);"> Choose</span> Us?</h1>
-                    <p>When you choose us, you'll feel the benefit of 10 years' experience of Pathology Lab. Because
-                        we know the digital world and we know that how to handle it. With working knowledge of online,
-                        SEO and social media.</p>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item">
-                        <span class="icon feature_box_col_one"><img src="assets/Choose-us/Lab.svg" alt=""></span>
-                        <h6>Advanced Labs</h6>
-                        <p>We use latest technology for the latest world because we know the demand of peoples.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item"> <span class="icon feature_box_col_two"><img
-                                src="assets/Choose-us/trusted-doctors.svg" alt=""></span>
-                        <h6>Trusted by Leading Doctors </h6>
-                        <p>We are always creative and and always lisen our costomers and we mix these two things and
-                            make beast design.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item"> <span class="icon feature_box_col_three">
-                            <img src="assets/Choose-us/24 x 7.svg" alt="" height="60" width="60"
-                                style="border-radius: 50%;">
-                        </span>
-                        <h6>24 x 7 User Support</h6>
-                        <p>If our customer has any problem and any query we are always happy to help then.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item">
-                        <span class="icon feature_box_col_four">
-                            <img src="assets/Choose-us/accurate-reports.svg" alt=""></span>
-                        <h6>Accurate Reports</h6>
-                        <p>Everyone wants to live on top of the mountain, but all the happiness and growth occurs while
-                            you're climbing it</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item">
-                        <span class="icon feature_box_col_five"><img src="assets/Choose-us/patient-service-centres.svg"
-                                alt="" height="60" width="60" style="border-radius: 50%;"></span>
-                        <h6>Patient Service Centres</h6>
-                        <p>Holding back technology to preserve broken business models is like allowing blacksmiths to
-                            veto the internal combustion engine in order to protect their horseshoes.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="item"> <span class="icon feature_box_col_six"><img
-                                src="assets/Choose-us/affordable-cost.svg" alt="" height="60" width="60"></span>
-                        <h6>Affordable cost</h6>
-                        <p>Love is a special word, and I use it only when I mean it. You say the word too much and it
-                            becomes cheap.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</div>
+<app-why-choose-us></app-why-choose-us>
 
 <!-- What Our Customers Say -->
 
@@ -338,7 +275,7 @@
             </div>
             <div class="single-review">
                 <p>
-                     The Home Service was excellent. Medical Technician took samples at 7:00am and returned at 9:30
+                    The Home Service was excellent. Medical Technician took samples at 7:00am and returned at 9:30
                     after breakfast to take further samples.
                 </p>
             </div>
@@ -366,8 +303,8 @@
             <div class="single-review">
                 <p>
                     the staff they are very professional and friendly
-                       definitely I
-                       will recommend my friends and family to patel lab.
+                    definitely I
+                    will recommend my friends and family to patel lab.
                 </p>
             </div>
             <div class="review-footer">
